--- a/src/pages/admin/EventsList.css
+++ b/src/pages/admin/EventsList.css
@@ -19,7 +19,7 @@
   line-height: 40px;
 }
 
-.events-list-header .button-primary {
+.events-list-header .button {
   width: 180px;
   height: 40px;
   border-radius: 8px;
