--- a/src/pages/admin/EventDetail.css
+++ b/src/pages/admin/EventDetail.css
@@ -2,6 +2,7 @@
   padding: 32px;
   max-width: 1136px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .event-header {
@@ -25,37 +26,27 @@
   font-weight: 600;
 }
 
-.event-banner {
-  width: 100%;
-  height: 300px;
-  border-radius: 12px;
-  overflow: hidden;
-  margin-bottom: 32px;
-}
-
-.event-banner img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .event-content {
   display: flex;
   flex-direction: column;
   gap: 32px;
+  width: 100%;
 }
 
 .event-info {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  position: relative;
   gap: 24px;
 }
 
 .event-image {
-  width: 100%;
-  height: 200px;
-  border-radius: 12px;
-  overflow: hidden;
+  width: 100vw;
+  height: 300px;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  position: relative;
 }
 
 .event-image img {
@@ -65,8 +56,7 @@
 }
 
 .event-details {
-  flex: 1;
-  padding: 0 16px;
+  padding: 24px 0;
 }
 
 .event-date,
