--- a/src/pages/EventsUser.css
+++ b/src/pages/EventsUser.css
@@ -24,7 +24,7 @@
   align-items: center;
   margin-bottom: 40px;
   background-color: white;
-  padding: 24px;
+  padding: inherit;
   border-radius: 12px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
